fix wrapping

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -144,5 +144,6 @@
   .profile__add-btn {
     margin: 0;
     width: 100%;
+    text-wrap-mode: nowrap;
   }
 }
